# lambda-globalize

./: .dockerignore  Dockerfile  LICENSE  README.md  benchmark.tex  benchmark_balanced.ml  benchmark_compare.ml  benchmark_linear.ml  benchmark_random.ml  dune  dune-project  gen_terms.ml  generate.ml  helpers.ml  lambda-globalize.opam  lambda-globalize.opam.locked  lambda.ml  lambdacount.ml  lambdahash.ml  mariarz.ml  tests.ml  valmari.ml
